--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&amp;family=Baloo+Tammudu+2&amp;family=Open+Sans&amp;family=Orbitron&amp;family=Roboto:wght@300&amp;display=swap" rel="stylesheet">
-    <title>CyberCrime Help Desk | GCESC CLASS 7 BOYS</title>
+    <title>Citizen Service Help Desk | GCESC</title>
   </head>
   <body class="font-fav">
     <div class="parent">
